Task instance Java/120